Get rid of `hr` tags to fine tune spacing; ensure message has label

--- a/components/simple_contact/stylesheets/index.styl
+++ b/components/simple_contact/stylesheets/index.styl
@@ -15,6 +15,11 @@
   garamond-size('s-body')
 
 .scontact-description
+  margin 15px 0
+  padding 15px 0
+  border-top 1px solid gray-lighter-color
+  border-bottom @border-top
+
   .vam-cell:first-child
     padding-right 20px
 
